<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PoliLast</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_student_home">StudentHomeActivity</string>
    <string name="title_activity_company_home">CompanyHomeActivity</string>
    <string name="title_activity_professor_home">ProfessorHomeActivity</string>

    <!-- Login form -->
    <string name="username_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_title">LOG IN</string>
    <string name="signup_title">SIGN UP</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="error_intro">Please, enter</string>
    <string name="error_blank_username">email,</string>
    <string name="error_join">and</string>
    <string name="error_blank_password">password</string>
    <string name="error_end">!</string>
    <string name="progress_login">Logging in</string>
    <!-- Signup form -->
    <string name="password_again_hint">Confirm password</string>
    <string name="select_user_type">Select user type</string>
    <string name="error_email_not_valid">Email is not valid</string>
    <string name="error_mismatched_passwords">mismatched password</string>
    <string name="error_user_type">choose user type</string>
    <string name="progress_signup">Signing up</string>
    <string name="dept_hint">Department</string>
    <string name="major_hint">Major</string>
    <string name="name_hint">Fullname</string>
    <string name="error_course">course</string>
    <string name="error_subject">subject</string>
    <!-- user type array -->
    <string-array name="users_array">
        <item>Student</item>
        <item>Professor</item>
        <item>Company</item>
    </string-array>
    <!-- user type array -->
    <string-array name="category">
        <item>Book</item>
        <item>Apartment</item>
        <item>Job</item>
    </string-array>
    <!-- course array -->
    <string-array name="course_array">
        <item>Software Engineering</item>
        <item>Embedded Systems Engineering</item>
        <item>Network Engineering</item>
        <item>Automation</item>
    </string-array>

    <!-- subject array -->
    <string-array name="subject_array">
        <item>Mobile application development</item>
        <item>Operating systems for embedded systems</item>
        <item>Computer network technologies and services </item>
        <item>Computer architectures</item>
        <item>Software engineering</item>
        <item>Modern design of control systems</item>
    </string-array>
    <!-- student home page -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="progress_logout">Logging out...</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">New Group</string>
    <!-- student home page -->
    <string name="browse_sessions">BROWSE SESSIONS</string>
    <string name="my_schedule_rate_this_session">SHOW MAP</string>
    <string name="placeholder_session_title"></string>
    <string name="placeholder_session_start_time">NO LECTURES FOR TODAY!</string>
    <!-- weekdays -->
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="hint">Editor #%d</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_notify">Your message</string>
    <string name="button_notify">Send</string>
    <string name="my_chats">MyChats</string>
    <string name="my_users">Users</string>
    <string name="contacts">CONTACTS</string>
    <string name="message_hint">Type here...</string>


</resources>
