<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="it.polito.mobile.polilast.LoginActivity"
    tools:showIn="@layout/activity_login">
    <!-- Login form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:imeActionId="@+id/edittext_action_login"
                android:imeActionLabel="@string/login_title"
                android:imeOptions="actionUnspecified" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/login_action_button"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_weight="1"
                    android:text="@string/login_title"
                    android:textStyle="bold" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/signup_action_button"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_weight="1"
                    android:text="@string/signup_title"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
