<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="it.polito.mobile.polilast.SignupActivity"
    tools:showIn="@layout/activity_signup">

    <!-- Login form -->



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:singleLine="true" />


            <EditText
                android:id="@+id/password_again_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_again_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:singleLine="true"
                android:imeActionId="@+id/edit_text_action_signup"
                android:imeActionLabel="@string/signup_title"
                android:imeOptions="actionUnspecified" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:id="@+id/spinner_user_type" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                style="@style/Widget.AppCompat.ActionButton"
                android:id="@+id/signup_confirm_button"
                android:layout_gravity="end"
                android:text="@string/signup_title"
                android:textStyle="bold"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

